# ET44.py

./: Makefile
tools/fwupdater/: Makefile  README.md  pyproject.toml
