[build-system]
requires = ["setuptools >= 45.2.0", "wheel != 0.1"]
build-backend = "setuptools.build_meta"

[project]
name="ET44fwupdater"
version="0.1"
description="Firmware update tool for ET44xx/ET45xx LCR meters"
dependencies= [
   "pyserial",
]
requires-python = ">=3.10,<4"
authors = [{name = "Philipp Pagel", email = "phil@techbotch.org"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["ET44xx", "ET45xx", "firmware update"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]

[project.urls]
Repository="https://github.com/philpagel/ET44.py"

